# iced-tabdoc

./: Cargo.toml  config.json
src/: config.rs  file_utils.rs  main.rs  toolbar.rs
src/documents/: image.rs  mod.rs
src/tabs/: create.rs  home.rs  mod.rs
